# EmojiUtils-server

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yaml  clippy.yaml  fmt.yaml
src/: main.rs
