[package]
name = "EmojiUtils-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
ring = "0.17.8"
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde_json = "1.0.133"
rand_core = "0.6.4"
argon2 = "0.5.3"
tokio-postgres = "0.7.12"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
